Задание на подключение скриптов

--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,12 @@
     <head>
         <title>Scripts</title>
     </head>
-    <body></body>
+    <body>
+        <script>
+            document.body.append('inline');
+        </script>
+        <script src="sync.js"></script>
+        <script async src="async.js"></script>
+        <script defer src="defer.js"></script>
+    </body>
 </html>
