--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
         <script>
             document.body.append('inline');
         </script>
-        <script src="sync.js"></script>
-        <script async src="async.js"></script>
-        <script defer src="defer.js"></script>
+        <script src="scripts/sync.js"></script>
+        <script async src="scripts/async.js"></script>
+        <script defer src="scripts/defer.js"></script>
     </body>
 </html>
